--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,12 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.active {
+  border-bottom: 2px solid cyan;
 }
